force-app/main/default/objects/DGX_Registry_Container__c/DGX_Registry_Container__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : Stores &quot;DGX Container Registry Administrator&quot; information from DGX Registration page submission</description>
    <label>NGC Registry</label>
    <nameField>
        <displayFormat>NGC-{000}</displayFormat>
        <label>NGC Registry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NGC Registry</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>