force-app/main/default/objects/DGX_Registry_Container__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-1415 : 
7.NGC Registry record should show a Related Account.
10.User should be able to see all related NGC Registry records under an Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NGC_Registry</relationshipName>
    <type>Lookup</type>
</CustomField>