force-app/main/default/objects/DGX_Registry_Container__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>