force-app/main/default/objects/DGX_Registry_Container__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>DGX_Registry_Containers</relationshipName>
    <type>Lookup</type>
</CustomField>