force-app/main/default/objects/DGX_Registry_Container__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>NGC Registry</relationshipLabel>
    <relationshipName>NGC_Registry</relationshipName>
    <type>Lookup</type>
</CustomField>