force-app/main/default/objects/DGX_Registry_Container__c/fields/Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Granted_Date__c</fullName>
    <description>NGC Granted Date</description>
    <inlineHelpText>NGC Granted Date</inlineHelpText>
    <label>Granted Date</label>
    <type>Date</type>
</CustomField>