force-app/main/default/objects/DGX_Registry_Container__c/fields/Hardware_Serial_Number_PAK_Id__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Serial_Number_PAK_Id__c</fullName>
    <description>SDS-1415 : User should be able to see all related NGC Registry records under an Account</description>
    <label>Hardware Serial Number / PAK Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>