force-app/main/default/objects/DGX_Registry_Container__c/fields/NGC_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>NGC_Org_Name__c</fullName>
    <label>NGC Org Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>