force-app/main/default/objects/DGX_Registry_Container__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Product Family coming from registration</description>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>