force-app/main/default/objects/DGX_Registry_Container__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <label>Registration Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>