force-app/main/default/objects/DGX_Registry_Container__c/fields/SAP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_ID__c</fullName>
    <formula>Account__r.SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Account ID</label>
    <type>Text</type>
</CustomField>