force-app/main/default/objects/DGX_Registry_Container__c/fields/SFDC_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Account_Id__c</fullName>
    <formula>CASESAFEID(Account__c)</formula>
    <label>SFDC Account Id</label>
    <type>Text</type>
</CustomField>