force-app/main/default/objects/DGX_Registry_Container__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>NGC Ready</fullName>
            </value>
            <value>
                <fullName>DCS</fullName>
            </value>
            <value>
                <fullName>Early Access</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>NVIDIA Team</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Fleet Command</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>