force-app/main/default/objects/DGX_Registry_Container__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Email_Address__c</columns>
    <columns>NGC_Org_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>