force-app/main/default/objects/DGX_Registry_Container__c/listViews/New_NGC_Registry_Records.listView-meta.xml
<ListView>
    <fullName>New_NGC_Registry_Records</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Company_Name__c</columns>
    <columns>NGC_Org_Name__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>New NGC Registry Records</label>
</ListView>