force-app/main/default/objects/DGX_Registry_Container__c/listViews/NGC_Registry_Records_Fleet_Command.listView-meta.xml
<ListView>
    <fullName>NGC_Registry_Records_Fleet_Command</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Entitlement__c</columns>
    <columns>Registration_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Fleet Command</value>
    </filters>
    <label>NGC Registry Records - Fleet Command</label>
</ListView>